--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tbirchem.github.io/genderParty",
   "name": "react-website-rf-tb",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "chart.js": "2.9.4",
+    "gh-pages": "^4.0.0",
     "live-server": "^1.2.2",
     "lodash": "^4.17.21",
     "ng2-charts": "^2.2.3",
