--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://tbirchem.github.io/genderParty",
-  "name": "react-website-rf-tb",
+  "homepage": "  https://tbirchem.github.io",
+  "name": "revealParty",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
